fix layout issues

--- a/public/styles/post-content.css
+++ b/public/styles/post-content.css
@@ -4,6 +4,7 @@
 
     .content {
         font-family:  "Jost", sans-serif;
+        @apply break-all
     }
 
     .content p {
